サイト内検索機能を追加しました！ まだ試験的なものですが、ページのタイトル名から検索できます。

--- a/css/anime.css
+++ b/css/anime.css
@@ -148,7 +148,7 @@
 .top,.top:hover {
     transition: all .5s ease;
 }
-.navbar,.bread {
+.navbar,.bread,.fixed {
   transition: .5s ease;
 }
 #anime-change {
